--- a/scss/_l-any-questions.scss
+++ b/scss/_l-any-questions.scss
@@ -111,6 +111,7 @@
 
     &-photo {
       flex: 0 0 260px;
+      margin: 0;
 
       @include mobile {
         flex: 1 1 auto;
